--- a/src/screen_content/walkinWO.html
+++ b/src/screen_content/walkinWO.html
@@ -1,20 +1,20 @@
 <div style="font-family: sans-serif">
-Warranty Status: <br/><br/>
-Model Number: <br/><br/>
-Model Name: <br/><br/>
-Serial Number: <br/><br/>
-EMC: <br/><br/>
-Year: <br/><br/>
-Missing Screws: <br/><br/>
-Scratches: <br/><br/>
-Dent: <br/><br/>
-Username: <br/><br/>
-Password: <br/><br/>
-Known Liquid Damage: <br/><br/>
-Computers Current Issues: <br/><br/>
-Customer Approvals: <br/><br/>
+Warranty Status:&emsp;&emsp;<br/><br/>
+Model Number:&emsp;&emsp;<br/><br/>
+Model Name:&emsp;&emsp;<br/><br/>
+Serial Number:&emsp;&emsp;<br/><br/>
+EMC:&emsp;&emsp;<br/><br/>
+Year:&emsp;&emsp;<br/><br/>
+Missing Screws:&emsp;&emsp;<br/><br/>
+Scratches:&emsp;&emsp;<br/><br/>
+Dent:&emsp;&emsp;<br/><br/>
+Username:&emsp;&emsp;<br/><br/>
+Password:&emsp;&emsp;<br/><br/>
+Known Liquid Damage:&emsp;&emsp;<br/><br/>
+Computers Current Issues:&emsp;&emsp;<br/><br/>
+Customer Approvals:&emsp;&emsp;<br/><br/>
 Estimated Turnaround Time: 1-2 Days <br/><br/>
-Assigned Technician: <br/><br/>
+Assigned Technician:&emsp;&emsp;<br/><br/>
 Tech Notes: <br/><br/>
 
 _________(Initial here) I accept that CleverTech is not responsible for any loss, corruption or breach of the data on my product during service.<br/><br/>
