--- a/src/screen_content/company_WO.html
+++ b/src/screen_content/company_WO.html
@@ -4,7 +4,7 @@ Warranty Status:&emsp;&emsp;<br/><br/>
 Model Number:&emsp;&emsp;<br/><br/>
 Model Name:&emsp;&emsp;<br/><br/>
 Serial Number:&emsp;&emsp;<br/><br/>
-EMC:&emsp;&emsp;<br/><br/>
+<a href="http://www.everymac.com/ultimate-mac-lookup/">EMC:&emsp;</a><br/><br/>
 Year:&emsp;&emsp;<br/><br/>
 Missing Screws:&emsp;&emsp;<br/><br/>
 Scratches:&emsp;&emsp;<br/><br/>
