--- a/src/screen_content/walkinWO.html
+++ b/src/screen_content/walkinWO.html
@@ -1,20 +1,18 @@
 <div style="font-family: sans-serif">
-Warranty Status:&emsp;&emsp;<br/><br/>
-Model Number:&emsp;&emsp;<br/><br/>
-Model Name:&emsp;&emsp;<br/><br/>
-Serial Number:&emsp;&emsp;<br/><br/>
-EMC:&emsp;&emsp;<br/><br/>
-Year:&emsp;&emsp;<br/><br/>
-Missing Screws:&emsp;&emsp;<br/><br/>
-Scratches:&emsp;&emsp;<br/><br/>
-Dent:&emsp;&emsp;<br/><br/>
-Username:&emsp;&emsp;<br/><br/>
-Password:&emsp;&emsp;<br/><br/>
-Known Liquid Damage:&emsp;&emsp;<br/><br/>
-Computers Current Issues:&emsp;&emsp;<br/><br/>
-Customer Approvals:&emsp;&emsp;<br/><br/>
+Warranty Status:&nbsp<br/><br/>
+Model Number:&nbsp;<br/><br/>
+Model Name:&nbsp<br/><br/>
+<a href="https://checkcoverage.apple.com/">Serial Number:&nbsp</a><br/><br/>
+<a href="https://www.everymac.com/ultimate-mac-lookup/">EMC:&nbsp</a><br/><br/>
+Year:&nbsp<br/><br/>
+Missing Screws:&nbsp<br/><br/>
+Scratches:&nbsp<br/><br/>
+Dent:&nbsp<br/><br/>
+Known Liquid Damage:&nbsp<br/><br/>
+Computers Current Issues:&nbsp<br/><br/>
+Customer Approvals:&nbsp<br/><br/>
 Estimated Turnaround Time: 1-2 Days <br/><br/>
-Assigned Technician:&emsp;&emsp;<br/><br/>
+Assigned Technician:&nbsp<br/><br/>
 Tech Notes: <br/><br/>
 
 _________(Initial here) I accept that CleverTech is not responsible for any loss, corruption or breach of the data on my product during service.<br/><br/>
