--- a/bin/screen_content/purchasing_procedures.html
+++ b/bin/screen_content/purchasing_procedures.html
@@ -10,22 +10,34 @@
 
 	<h2>Low Inventory Notice:</h2>
 	<ol>
-		<li>Verify low or no inventory physically.</li>
-		<li>Open Item List & locate part by Item # or item name.</li>
-		<li>Verify no orders have already been placed on "Orders"</li>
+		<li>Physically verify low or no inventory.</li>
+		<li>Click on "Inventory" tab.</li>
+		<li>Click on "Item List".</li>
+		<li>Enter "Item #" or "Item Name" within Search Bar.</li>
+		<li>Within "Item Detail" Click on "Orders" verify no "Purchase Orders" exist.</li>
+		<li>Within "Item Detail" go to "History Tab".</li>
+		<li>Double Click on most recent "Receive Item".</li>
+		<li>Now you will have "Vendor Name" & "Yellow tab #" near bottom of page.</li>
+		<li>If this item cannot be reordered from same vendor, contact "Minh La" for assistance.</li>
 	</ol>
 
-	<h2>Reference Previous Vendor:</h2>
+	<h2>Placing Order With Vendor:</h2>
 	<ol>
-		<li>Within Items -> History you will see Receive Items history.</li>
-		<li>Double Click on Receive Items History and you will find a vendor name and yellow tab with a reference # or Order #, use this # to place another order from same vendor.</li>
-		<li>If this item cannot be reordered from same vendor contact Store Manager for assistance.</li>
+		<li>Go to Vendors website.</li>
+		<li>Use "Yellow tab #" in Vendors website to reference previous ordered item.</li>
+		<li>If this item cannot be reordered from same vendor, contact "Minh La" for assistance.</li>
 	</ol>
 
 	<h2>Create New Purchase Order:</h2>
 	<ol>
-		<li>Reference Vendor.</li>
-		<li>Apply to shipping charges within Item Cost.</li>
-		<li>Include Reference # within Instructions Section on New PO.</li>
+		<li>Click on "Purchase" tab for drop down menu.</li>
+		<li>Click on "New Purchase Order".</li>
+		<li>Input "Vendor Name" on the top left.</li>
+		<li>Input "Item #" or "Item Name" in "Enter Item(s)" bar.</li>
+		<li>If there is a shipping charge add it to the total item cost.</li>
+		<li>Include "Yellow tab #" within Instructions Section on the bottom left of PO.</li>
+		<li>When completed Click on "Save Only"</li>
+		<li>All done.</li>
+
 	</ol>
 </body>
