--- a/bin/screen_content/technician_repair_procedures.html
+++ b/bin/screen_content/technician_repair_procedures.html
@@ -7,6 +7,11 @@
 </style>
 
 <body style="font-family: arial; font-size: 13px">
+	<h2>Clock-In:</h2>
+	<ol>
+		<li>Open POS.</li>
+		<li>Clock In.</li>
+	</ol>
 
 	<h2>Policies:</h2>
 	<ol>
@@ -25,6 +30,12 @@
 	<ol>
 		<li>Compare Approvals to your diagnostics.</li>
 		<li>If additional parts need to be replaced put computer back together and send to Sales Bar for customer approval or if Approvals match continue repair.</li>
+	</ol>
+	
+	<h2>Final Test:</h2>
+	<ol>
+		<li>Complete Final Tests.</li>
+		<li>If additional parts are needed, repeat Approval process.</li>
 	</ol>
 	
 	<h2>Clean:</h2>
