--- a/bin/screen_content/walkinWO.html
+++ b/bin/screen_content/walkinWO.html
@@ -1,18 +1,17 @@
 <div style="font-family: sans-serif">
-Warranty Status:&nbsp<br/><br/>
-Model Number:&nbsp;<br/><br/>
-Model Name:&nbsp<br/><br/>
-<a href="https://checkcoverage.apple.com/">Serial Number:&nbsp</a><br/><br/>
-<a href="https://www.everymac.com/ultimate-mac-lookup/">EMC:&nbsp</a><br/><br/>
-Year:&nbsp<br/><br/>
-Missing Screws:&nbsp<br/><br/>
-Scratches:&nbsp<br/><br/>
-Dent:&nbsp<br/><br/>
-Known Liquid Damage:&nbsp<br/><br/>
-Computers Current Issues:&nbsp<br/><br/>
-Customer Approvals:&nbsp<br/><br/>
-Estimated Turnaround Time: 1-2 Days <br/><br/>
-Assigned Technician:&nbsp<br/><br/>
+Model Number:&nbsp;<br/>
+Model Name:&nbsp<br/>
+<a href="https://checkcoverage.apple.com/">Serial Number:&nbsp</a><br/>
+<a href="https://www.everymac.com/ultimate-mac-lookup/">EMC:&nbsp</a><br/>
+Year:&nbsp<br/>
+Missing Screws:&nbsp<br/>
+Scratches:&nbsp<br/>
+Dent:&nbsp<br/>
+Known Liquid Damage:&nbsp<br/>
+Computer's Current Issues:&nbsp<br/>
+Customer Approvals:&nbsp<br/>
+Estimated Turnaround Time: 1-2 Days <br/>
+Assigned Technician:&nbsp<br/>
 Tech Notes: <br/><br/>
 
 _________(Initial here) I accept that CleverTech is not responsible for any loss, corruption or breach of the data on my product during service.<br/><br/>
