--- a/src/screen_content/shipping_procedures.html
+++ b/src/screen_content/shipping_procedures.html
@@ -23,7 +23,7 @@
 		<li>Change Mailpiece to "Large Flat Rate Box".</li>
 		<li>Make sure "Email" address is associated to company shipment. </li>
 		<li>Print Shipping Label by clicking "Prepare Label for Printing".</li>
-		<li>Open "Mailing Log" & email customers last shipment information.</li>
+		<li>Open "Mailing Log" & email customer's last shipment information.</li>
 		<li>Change Subject text to "Package Shipped To You from CleverTech!" & "Send Mail".</li>
 	</ol>
 
